# uv-streamlit-setup

./: pyproject.toml
.github/workflows/: ci.yml
src/myproject/pkg1/: simple_fn.py
src/myproject/pkg2/: http_util.py
tests/: test_felix_integration.py
