[project]
name = "uv-streamlit-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.4",
    "streamlit>=1.40.2",
    # Exact older pin so Felix has a clear upgrade path for QA remediation tests.
    "urllib3==2.2.3",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ['src']
include = ['myproject*']

[tool.uv.sources]
uv-streamlit-setup = { workspace = true }

[dependency-groups]
dev = [
    "uv-streamlit-setup",
]

[tool.pytest.ini_options]
pythonpath="src"
