[project]
name = "uv-streamlit-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.4",
    "streamlit>=1.40.2",
    # urllib3 1.26 + requests 2.28: app uses method_whitelist (removed in urllib3 2.x).
    # Felix upgrading urllib3 to 2.x will break http_util + integration tests for real.
    "urllib3==1.26.20",
    "requests==2.28.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ['src']
include = ['myproject*']

[tool.uv.sources]
uv-streamlit-setup = { workspace = true }

[dependency-groups]
dev = [
    "uv-streamlit-setup",
]

[tool.pytest.ini_options]
pythonpath="src"
